[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["etogit <sturik@bk.ru>"]
readme = "README.md"
packages = [
  { include = "page_analyzer" },
]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
gunicorn = "^20.1.0"
Flask = "^2.3.2"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.main:main"
